--- a/MicroServices/MicroServices.CompanyService.BlazorServerSide/Translations/EmployeeTranslations.resx
+++ b/MicroServices/MicroServices.CompanyService.BlazorServerSide/Translations/EmployeeTranslations.resx
@@ -117,22 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Building" xml:space="preserve">
-    <value>Building</value>
+  <data name="Email" xml:space="preserve">
+    <value>E-mail</value>
   </data>
-  <data name="CompanyName" xml:space="preserve">
-    <value>Name</value>
+  <data name="FirstName" xml:space="preserve">
+    <value>Firstname</value>
   </data>
-  <data name="CompanyOverview" xml:space="preserve">
-    <value>Manage Companies</value>
-  </data>
-  <data name="Floor" xml:space="preserve">
-    <value>Floor</value>
-  </data>
-  <data name="PhoneNumber" xml:space="preserve">
-    <value>Phone</value>
-  </data>
-  <data name="VatNumber" xml:space="preserve">
-    <value>VAT Number</value>
+  <data name="LastName" xml:space="preserve">
+    <value>Lastname</value>
   </data>
 </root>
